<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/information1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size"
            android:gravity="center"
            android:text="@string/information1"
           />
        <TextView
            android:id="@+id/information2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size"
            android:gravity="center"
            android:text="@string/information2"
            />
            <EditText
                android:id="@+id/name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size"
                android:textSize="@dimen/size"
                android:hint="@string/name"
                />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size">

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCreate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonSelect"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/buttonSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSelect"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/buttonCreate"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/buttonStartTheGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startTheGame"
        android:text="@string/buttonStartTheGame"
        />
</LinearLayout>
</ScrollView>
